--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "node --env-file=.env --watch ./src/index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.19.3"
   }
