--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.19.3"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.96"
   }
 }
