--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "start": "node --env-file=.env --watch ./src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.19.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.96"
